# Navigation-Stack

./: .gitmodules  LICENSE  Readme
src/: CMakeLists.txt
src/assembly_urdf/: CMakeLists.txt  package.xml
src/assembly_urdf/config/: joint_names_assembly_urdf.yaml
src/assembly_urdf/launch/: display.launch  gazebo.launch
src/assembly_urdf/meshes/: lifter_link.STL  mech_body_link.STL  revolute_link.STL  slider_link.STL
src/assembly_urdf/urdf/: assembly_urdf.csv  assembly_urdf.urdf
src/my_talker_listener/: CMakeLists.txt  package.xml
src/my_talker_listener/scripts/: listener.py  talker.py
src/robot_path_planning/: CMakeLists.txt  frames.gv  package.xml
src/robot_path_planning/config/: amcl_params.yaml  base_local_planner_params.yaml  controllers.yaml  costmap_common_params.yaml  costmap_params.yaml  ekf.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml.save  move_base_params.yaml  teb_params.yaml
src/robot_path_planning/include/robot_path_planning/: localization_node.h  movement_node.h  slam_node.h
src/robot_path_planning/launch/: costmap.launch  display.launch  dynamic_built_in_path_planning.launch  gazebo_simulation.launch  hector_localize.launch  hector_slam.launch  jetson.launch  lab.launch  laptop.launch  load_map.launch  map_generation.launch  move_base.launch  path_planning.launch  path_simulation.launch  real_dynamic_amcl.launch  real_dynamic_hector.launch  real_dynamic_path_amcl.launch  real_static_path_hector.launch  rosserial_control.launch  static_amcl_path.launch  static_hector_slam_path.launch  test.launch
src/robot_path_planning/maps/: dld_lab.pgm  dld_lab.yaml  hostel.pgm  hostel.yaml  lab_world.pgm  lab_world.yaml  map.pgm
src/robot_path_planning/rviz/: built_in_path_planning.rviz  custom_planner.rviz  display.rviz  hector_config.rviz  map_generation.rviz  path_planning.rviz  static_hector_slam.rviz  static_path_simulation.rviz
src/robot_path_planning/src/: .port_automation.py.swp  costmap.py  dynamic_costmap.py  dynamic_obstacle.py  fake_odom.py  global_planner.py  hardware_interface.py  hector_odom.py  hls_player.html  hw_interface.py  initial_pose_hector_to_amcl.py  joint_state.py  laptop_to_ros.py  lidar_odom.py  lidar_to_laptop.py  local_a_star.py  local_planner.py  local_static.py  mech_control.py  move_base_controller.py  navfn_global.py  odom_to_base.py  odom_ugv.py  p2.py  p3.py  port_automation.py  raw_data.py  replan.py  rosbridge.py  rosserial.py  send_lidar.py  standalone_costmap.cpp  stream_rviz.py  teb_diff_drive.py  udp.py  ugv_control.py
src/robot_path_planning/world/: lab.world
src/ugv/: CMakeLists.txt  package.xml
src/ugv/config/: joint_names_ugv.yaml
src/ugv/launch/: display.launch  gazebo.launch
src/ugv/meshes/: BL-link.STL  BR-link.STL  FL-link.STL  FR-link.STL  base_link.STL
src/ugv/urdf/: ugv.csv  ugv.urdf
