cmake_minimum_required(VERSION 3.0.2)
project(robot_path_planning)

## Find catkin and any catkin packages
find_package(catkin REQUIRED COMPONENTS
  rospy
  roscpp
  geometry_msgs
  teb_local_planner
  costmap_2d
  nav_msgs
  sensor_msgs
  tf2_ros
  pluginlib
  robot_state_publisher
)


catkin_package(
  CATKIN_DEPENDS roscpp std_msgs geometry_msgs nav_msgs sensor_msgs tf2_ros robot_state_publisher
)

## Specify additional locations of header files
include_directories(
  ${catkin_INCLUDE_DIRS}
  include
)


## Ensure that the CATKIN_PACKAGE_BIN_DESTINATION is set correctly
set(CATKIN_PACKAGE_BIN_DESTINATION bin)


## Install launch files
install(DIRECTORY launch/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
)

## Install RViz config files
install(DIRECTORY rviz/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/rviz
)

## Install config files
install(DIRECTORY config/
  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
)

##Install src files
install(
    DIRECTORY src/
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/src
)

add_executable(robot_path_planning src/standalone_costmap.cpp)
target_link_libraries(robot_path_planning ${catkin_LIBRARIES})